Small fix on gap for section 1 info

--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,10 @@ button {
 #infosection1 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1F2937;
     color: white;
-    gap: 20px;
+    gap: 30px;
 }
 
 .infotext {
